--- a/CinemaBook/Scence/MessageChatAndNotifaction/NotifcationMessage/view/NotifcationMessageViewController.xib
+++ b/CinemaBook/Scence/MessageChatAndNotifaction/NotifcationMessage/view/NotifcationMessageViewController.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="btn_checkin" destination="y9r-MJ-d8t" id="nS6-rc-XM8"/>
                 <outlet property="btn_notif" destination="bfw-uv-ggw" id="k7X-ZW-pHs"/>
+                <outlet property="height_viewoption" destination="JOM-qk-8Lu" id="0Ma-6n-AGf"/>
                 <outlet property="tableview" destination="YGS-A0-CXO" id="5Gj-xA-1qx"/>
                 <outlet property="txt_search" destination="Yos-Va-mw2" id="yba-lB-dVh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -81,11 +82,12 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="y8p-f8-m8Y">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfw-uv-ggw">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfw-uv-ggw">
                                             <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="50"/>
                                             <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                            <state key="normal" title="Thông báo">
+                                            <state key="normal" title="Thông báo" image="bell" catalog="system">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <connections>
@@ -95,7 +97,7 @@
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9r-MJ-d8t">
                                             <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="50"/>
                                             <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="plain" title="Chấm công"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="checkmark.circle.badge.questionmark" catalog="system" title="Chấm công"/>
                                             <connections>
                                                 <action selector="btn_show_list_checkin:" destination="-1" eventType="touchUpInside" id="Afh-63-OoH"/>
                                             </connections>
@@ -140,6 +142,8 @@
         </view>
     </objects>
     <resources>
+        <image name="bell" catalog="system" width="125" height="128"/>
+        <image name="checkmark.circle.badge.questionmark" catalog="system" width="128" height="114"/>
         <image name="icon-search-2" width="18" height="18"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
